--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
 </head>
 <body>
 <h1><strong>Odin Recipes:</strong></h1>
-<a href="/recipes/guacamole.html">Guacamole Recipe</a>
+<ul>
+    <li><a href="./recipes/guacamole.html">Guacamole Recipe</a></li>
+    <li><a href="./recipes/spaghetti.html">Spaghetti Aglio e Olio Recipe</a></li>
+    <li><a href="./recipes/chicken.html">Baked Chicken Breast Recipe</a></li>
+</ul>
+
 
 </body>
 </html>
