Finished off the steps for the guacamole

--- a/recipes/guacamole.html
+++ b/recipes/guacamole.html
@@ -18,5 +18,15 @@
         <li>1 clove garlic, minced</li>
         <li>Salt and pepper to taste</li>
     </ul>
+    <h2><strong>Steps:</strong></h2>
+    <ol>
+        <li>Cut the avocados in half and remove the pits. Scoop out the flesh into a bowl.</li>
+        <li>Squeeze the juice of the lime over the avocado and mash it with a fork or potato masher until it reaches your desired consistency.</li>
+        <li>Add the diced red onion, tomato, cilantro, and minced garlic to the bowl.</li>
+        <li>Season with salt and pepper to taste.</li>
+        <li>Mix everything together until well combined.</li>
+        <li>Taste and adjust the seasoning if needed.</li>
+        <li>Serve immediately with tortilla chips or as a topping for tacos, nachos, or sandwiches.</li>
+    </ol>
 </body>
 </html>
