Finished off the steps for the chicken

--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -6,6 +6,29 @@
 <body>
     <h1><strong>Baked Chicken Breast Recipe:</strong></h1>
     <img src="../images/chicken.jpg"alt="An image of the finished product.">
-
+    <h2><strong>Description:</strong></h2>
+    <p>When life hands you chicken breasts, bake them with a touch of love and a dash of flavor! These juicy, oven-baked chicken breasts are coated with a tantalizing blend of spices and herbs. As they sizzle and roast in the oven, your kitchen will transform into a mouthwatering oasis of aromas. With each tender bite, you'll experience a taste sensation that will make you cluck with delight. So, let's get those feathers ruffled and give your taste buds something to squawk about!</p>
+    <h2><strong>Ingredients:</strong></h2>
+    <ul>
+        <li>4 boneless, skinless chicken breasts</li>
+        <li>2 tablespoons olive oil</li>
+        <li>1 teaspoon garlic powder</li>
+        <li>1 teaspoon paprika</li>
+        <li>1/2 teaspoon salt</li>
+        <li>1/4 teaspoon black pepper</li>
+        <li>Optional: additional herbs and spices of your choice (e.g., dried thyme, oregano, rosemary)</li>
+    </ul>
+    <h2><strong>Steps:</strong></h2>
+    <ol>
+        <li>Preheat your oven to 400°F (200°C). Lightly grease a baking dish or line it with parchment paper.</li>
+        <li>Place the chicken breasts on the baking dish.</li>
+        <li>Drizzle the olive oil over the chicken breasts, then rub them to coat evenly.</li>
+        <li>In a small bowl, mix together the garlic powder, paprika, salt, black pepper, and any additional herbs or spices you'd like to use.</li>
+        <li>Sprinkle the seasoning mixture over the chicken breasts, coating both sides.</li>
+        <li>Place the baking dish with the seasoned chicken breasts in the preheated oven.</li>
+        <li>Bake for about 20-25 minutes or until the chicken is cooked through and reaches an internal temperature of 165°F (74°C).</li>
+        <li>Once cooked, remove the chicken breasts from the oven and let them rest for a few minutes before serving.</li>
+        <li>Slice or serve the chicken breasts whole, as desired.</li>
+    </ol>
 </body>
 </html>
