--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
 </head>
 <body>
 <h1><strong>Odin Recipes:</strong></h1>
+<p><b>Hi! This is my first Odin Project.</b></p>
 <ul>
     <li><a href="./recipes/guacamole.html">Guacamole Recipe</a></li>
     <li><a href="./recipes/spaghetti.html">Spaghetti Aglio e Olio Recipe</a></li>
     <li><a href="./recipes/chicken.html">Baked Chicken Breast Recipe</a></li>
 </ul>
-
+<h3>Enjoy!</h3>
 
 </body>
 </html>
